Minor Change with Meta Description

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Artificial Intelliegence Company | INDIA </title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Magnify Sourcing - An AI + Data Company" name="description">
+  <meta content="AI + Data" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.ico" rel="icon">
@@ -263,7 +263,7 @@
 
         <div class="section-header">
           <h2>Our Services</h2>
-          <h3>Magnify Sourcing builds cutting-edge solutions for clients around the globe.</h3>
+          <p>Magnify Sourcing builds cutting-edge solutions for clients around the globe.</p>
         </div>
 
         <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
@@ -517,7 +517,7 @@
 
         <div class="section-header">
           <h2>Contact</h2>
-          <h3>We are Here For You</h3>
+          <p>We are Here For You</p>
         </div>
 
         <div class="row gx-lg-0 gy-4">
@@ -632,7 +632,7 @@
             <li><a href="#services">Data Engineering</a></li>
             <li><a href="#services">Data Analysis</a></li>
             <li><a href="#services">Web Development</a></li>
-            <li><a href="#services">Marketting</a></li>
+            <li><a href="#services">Marketing</a></li>
           </ul>
         </div>
 
