--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Artificial Intelliegence Company | INDIA </title>
   <meta content="Magnify Sourcing - An AI + Data Company" name="description">
-  <meta content="AI + Data" name="keywords">
+  <meta content="AI + Data Science" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.ico" rel="icon">
