Updating Meta Content

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Artificial Intelliegence Company | INDIA </title>
+  <title>Data Analytics Company | Coimbatore </title>
   <meta content="Magnify Sourcing - An AI + Data Company" name="description">
   <meta content="AI + Data Science" name="keywords">
 
