--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Data Analytics Company | Coimbatore </title>
-  <meta content="Magnify Sourcing - An AI + Data Company" name="description">
+  <title>Web Design & Digital Marketing Services | Bangalore | Coimbatore </title>
+  <meta content="Web Design & Digital Marketing Services in Bangalore and Coimbatore" name="description">
   <meta content="AI + Data Science" name="keywords">
 
   <!-- Favicons -->
