--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="col-lg-6">
             <div class="content ps-0 ps-lg-5">
               <p>
-                <span><b>Magnify Sourcing</b></span> creates flexible solutions to match your evolving business needs. We work with our partners to adapt all known cutting-edge technology. If the right solution isn’t available, we custom-build it to ensure enduring and scalable success. Where required, we can implement the most difficult and technically challenging ideas, but we are at heart, a small, human-centric business that cares about every client and seeks to provide simple solutions. Complexity made simple. We challenge norms, we challenge ourselves, we dive into uncharted waters headfirst. This is Innovation-as-a-Service.
+                <span><b>Magnify Sourcing</b></span> Magnify Sourcing delivers logo,website,landing page,brochure,web hosting,social media marketing,SEO,branding,content creation
               </p>
 
               <div class="position-relative mt-4">
