--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
             <h3>A pioneer in software development</h3>
             <img src="assets/img/about.jpg" class="img-fluid rounded-4 mb-4" alt="">
             <li class="body-1 text-black">With an Innovation-as-a-Service mindset, we strive to be your partner today, leading into tomorrow.</li>
-            <li class="body-1 text-black">We combine custom-built and commercial off-the-shelf products to provide the most efficient and cost-effective solutions.</li>
+            <li class="body-1 text-black">We combine custom-built and commercial off-the-shelf products to provide the most efficient and cost-effective 
+              solutions.</li>
             <li class="body-1 text-black">Nimble and human-centric, we care about every client and are committed to your lasting success.</li>
             <li class="body-1 text-black">We hire the best and the brightest - and we invest in our team to foster dedication and excellence.</li>
             <p></p>
@@ -180,7 +181,8 @@
           <div class="col-lg-6">
             <div class="content ps-0 ps-lg-5">
               <p>
-                <span><b>Magnify Sourcing</b></span> Magnify Sourcing delivers logo,website,landing page,brochure,web hosting,social media marketing,SEO,branding,content creation
+                <span><b>Magnify Sourcing</b></span> Magnify Sourcing delivers Logo, Website, Landing Page, Brochure, Web Application Development & 
+                Hosting, Data Science, Data Analytics, AI based Application, Social Media Marketing, SEO, Branding, Content Creation.
               </p>
 
               <div class="position-relative mt-4">
