--- a/index.html
+++ b/index.html
@@ -617,8 +617,8 @@
           <p>We’ll accelerate your journey from data to decisions</p>
           <div class="social-links d-flex mt-4">
             <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="https://www.facebook.com/profile.php?id=100087117294934"><i class="bi bi-facebook"></i></a>
+            <a href="#" class="https://instagram.com/magnifysourcing?igshid=YmMyMTA2M2Y="><i class="bi bi-instagram"></i></a>
             <a href="https://www.linkedin.com/in/magnify-sourcing-455739255/" class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
