--- a/blog.html
+++ b/blog.html
@@ -311,9 +311,9 @@
           <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
           <div class="social-links d-flex mt-4">
             <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100087117294934" class="facebook"><i class="bi bi-facebook"></i></a>
+            <a href="https://instagram.com/magnifysourcing?igshid=YmMyMTA2M2Y=" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/magnify-sourcing-455739255/" class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
