about us commit1

--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
         </div>
 
         <div class="row gy-4">
-          <div class="col-lg-6">
+          <div class="col-lg-6"> 
             <h3>A pioneer in software development</h3>
-            <img src="assets/img/about.jpg" class="img-fluid rounded-4 mb-4" alt="">
+            <img src="assets/img/Yummy-bootstrap-website-template-md.png" class="img-fluid rounded-4 mb-4" alt="">
             <li class="body-1 text-black">With an Innovation-as-a-Service mindset, we strive to be your partner today, leading into tomorrow.</li>
             <li class="body-1 text-black">We combine custom-built and commercial off-the-shelf products to provide the most efficient and cost-effective
               solutions.</li>
