google ads commit

--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
               <div class="icon">
                 <i class="bi bi-shop"></i>
               </div>
-              <h3>Technology</h3>
-              <p>"We connect brands, automation, and profit via Technology"</p>
+              <h3>Google Ads</h3>
+              <p>"Use the power to Google Ads to your increase your business"</p>
               <!-- <a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a> -->
             </div>
           </div><!-- End Service Item -->
