google ads commit

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 <i class="bi bi-shop"></i>
               </div>
               <h3>Google Ads</h3>
-              <p>"Use the power to Google Ads to your increase your business"</p>
+              <p>"Use the power of Google Ads to your increase your business"</p>
               <!-- <a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a> -->
             </div>
           </div><!-- End Service Item -->
