--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 <i class="bi bi-shop"></i>
               </div>
               <h3>Google Ads</h3>
-              <p>"Use the power of Google Ads to your increase your business"</p>
+              <p>"Use the power of Google Ads to increase your business"</p>
               <!-- <a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a> -->
             </div>
           </div><!-- End Service Item -->
@@ -614,7 +614,7 @@
           <a href="index.html" class="logo d-flex align-items-center">
             <span>Magnify Sourcing</span>
           </a>
-          <p>We’ll accelerate your journey from data to decisions</p>
+          <p>We help Businesses grow using Digital Marketing and Web Application Solutions</p>
           <div class="social-links d-flex mt-4">
             <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
             <a href="https://www.facebook.com/profile.php?id=100087737161276" class="facebook"><i class="bi bi-facebook"></i></a>
