--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 88383 94557</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://wa.me/917904327878" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
         <a href="https://www.facebook.com/profile.php?id=100087737161276" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="https://instagram.com/magnifysourcing?igshid=YmMyMTA2M2Y=" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/magnify-sourcing-455739255/" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
