--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
               <h4>Sakthivel</h4>
               <span>CEO</span>
               <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-whatsapp"></i></a>
                 <a href=""><i class="bi bi-facebook"></i></a>
                 <a href=""><i class="bi bi-instagram"></i></a>
                 <a href=""><i class="bi bi-linkedin"></i></a>
@@ -381,7 +381,7 @@
               <h4>Naveen Kumar</h4>
               <span>Managing Director</span>
               <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-whatsapp"></i></a>
                 <a href=""><i class="bi bi-facebook"></i></a>
                 <a href=""><i class="bi bi-instagram"></i></a>
                 <a href=""><i class="bi bi-linkedin"></i></a>
@@ -395,7 +395,7 @@
               <h4>Deenathayalan</h4>
               <span>Developer</span>
               <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-whatsapp"></i></a>
                 <a href=""><i class="bi bi-facebook"></i></a>
                 <a href=""><i class="bi bi-instagram"></i></a>
                 <a href=""><i class="bi bi-linkedin"></i></a>
@@ -411,7 +411,7 @@
               <h4>#</h4>
               <span>Manager</span>
               <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-whatsapp"></i></a>
                 <a href=""><i class="bi bi-facebook"></i></a>
                 <a href=""><i class="bi bi-instagram"></i></a>
                 <a href=""><i class="bi bi-linkedin"></i></a>
@@ -616,7 +616,7 @@
           </a>
           <p>We help Businesses grow using Digital Marketing and Web Application Solutions</p>
           <div class="social-links d-flex mt-4">
-            <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+            <a href="https://wa.me/917904327878" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
             <a href="https://www.facebook.com/profile.php?id=100087737161276" class="facebook"><i class="bi bi-facebook"></i></a>
             <a href="https://instagram.com/magnifysourcing?igshid=YmMyMTA2M2Y=" class="instagram"><i class="bi bi-instagram"></i></a>
             <a href="https://www.linkedin.com/in/magnify-sourcing-455739255/" class="linkedin"><i class="bi bi-linkedin"></i></a>
