about us commit

--- a/index.html
+++ b/index.html
@@ -164,26 +164,18 @@
 
         <div class="section-header">
           <h2>About Us</h2>
-          <p>Unique in the industry, Magnify Sourcing offers an unmatched combination of innovation, creativity, adaptability, accessibility and undaunted determination to choose the roads less traveled in our pursuit of customer success. Propelled by our pioneering spirit, we tackle the most complex problems with elegant, scalable solutions.</p>
+          <p>Unique in the industry, Magnify Sourcing offers an unmatched combination of innovation, creativity, adaptability, accessibility and undaunted determination to choose the roads less traveled in our pursuit of customer success. Propelled by our pioneering spirit, we tackle the most complex problems with elegant, scalable solutions. Magnify Sourcing delivers Logo, Website, Landing Page, Brochure, Web Application Development & Hosting, Data Science, Data Analytics, AI based Application, Social Media Marketing, SEO, Branding, Content Creation</p>
         </div>
 
         <div class="row gy-4">
           <div class="col-lg-6" data-aos="fade-up"> 
-            <h3>A pioneer in web development</h3>
+            <h3></h3>
             <img src="assets/img/Yummy-bootstrap-website-template-md.png" class="img-fluid rounded-4 mb-4" alt="">
-            <li class="body-1 text-black">With an Innovation-as-a-Service mindset, we strive to be your partner today, leading into tomorrow.</li>
-            <li class="body-1 text-black">We combine custom-built and commercial off-the-shelf products to provide the most efficient and cost-effective
-              solutions.</li>
-            <li class="body-1 text-black">Nimble and human-centric, we care about every client and are committed to your lasting success.</li>
-            <li class="body-1 text-black">We hire the best and the brightest - and we invest in our team to foster dedication and excellence.</li>
             <p></p>
           </div>
           <div class="col-lg-6">
             <div class="content ps-0 ps-lg-5">
               <p>
-                <span><b>Magnify Sourcing</b></span> delivers Logo, Website, Landing Page, Brochure, Web Application Development &
-                Hosting, Data Science, Data Analytics, AI based Application, Social Media Marketing, SEO, Branding, Content Creation.
-                Magnify Sourcing is a leading growth-based digital marketing and technology company. We are a vibrant team of experienced digital enthusiasts who provide out-of-the-box ideas and solutions for our clients
               </p>
 
               <div class="position-relative mt-4">
