deactivate team section

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     <!-- ======= Testimonials Section ======= -->
 
     <!-- ======= Our Team Section ======= -->
-    <section id="team" class="team">
+    <!-- <section id="team" class="team">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
@@ -365,9 +365,9 @@
                 <a href=""><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
-          </div><!-- End Team Member -->
+          </div><!- End Team Member -->
 
-          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
+          <!-- <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
               <img src="assets/img/md.jpg" class="img-fluid" alt="">
               <h4>Naveen Kumar</h4>
@@ -393,11 +393,11 @@
                 <a href=""><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
-          </div><!-- End Team Member -->
+          </div><!- End Team Member -->
 
           <!-- End Team Member -->
 
-          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
+          <!-- <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
               <img src="assets/img/m.jpg" class="img-fluid" alt="">
               <h4>#</h4>
@@ -409,12 +409,12 @@
                 <a href=""><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
-          </div><!-- End Team Member -->
+          </div><!- End Team Member -->
 
-        </div>
+        <!-- </div>
 
       </div>
-    </section><!-- End Our Team Section -->
+    </section> --> <!-- End Our Team Section -->
 
 
 
