--- a/index.html
+++ b/index.html
@@ -246,15 +246,15 @@
       </div>
     </section><!-- End Stats Counter Section -->
 
-    <!-- ======= Call To Action Section ======= -->
+    <!-- ======= Call To Action Section ======= 
     <section id="call-to-action" class="call-to-action">
       <div class="container text-center" data-aos="zoom-out">
-        <!-- <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn"></a> -->
+         <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn"></a> 
         <h3>Magnify Sourcing</h3>
         <h1 class="call-to-action">Want to talk about your project?</h1>
         <a class="cta-btn" href="#contact">Call To Action</a>
       </div>
-    </section><!-- End Call To Action Section -->
+    </section> End Call To Action Section -->
 
     <!-- ======= Our Services Section ======= -->
     <section id="services" class="services sections-bg">
@@ -512,8 +512,8 @@
       </div>
     </section> -->
 
-    <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <!-- ======= Contact Section ======= 
+     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
@@ -533,7 +533,7 @@
                   <h4>Location:</h4>
                   <p>36, Ezhilagam, 2nd Street, KRG Nagar, Ganapathy, Coimbatore - 641006.</p></a>
                 </div>
-              </div><!-- End Info Item -->
+              </div><! End Info Item 
 
               <div class="info-item d-flex">
                 <i class="bi bi-envelope flex-shrink-0"></i>
@@ -542,7 +542,7 @@
                   <h4>Email:</h4>
                   <p>deena@magnifysourcing.com</p></a>
                 </div>
-              </div><!-- End Info Item -->
+              </div> <! End Info Item 
 
               <div class="info-item d-flex">
                 <i class="bi bi-phone flex-shrink-0"></i>
@@ -551,7 +551,7 @@
                   <h4>Call:</h4>
                   <p>+91 88383 94557</p></a>
                 </div>
-              </div><!-- End Info Item -->
+              </div><! End Info Item 
 
               <div class="info-item d-flex">
 
@@ -560,8 +560,8 @@
                   <h4>Open Hours:</h4>
                   <p>Mon-Fri: 9AM - 6PM</p>
                 </div>
-              </div><!-- End Info Item -->
-            </div>
+              </div><! End Info Item -->
+            <!-- </div>
 
           </div>
 
@@ -590,10 +590,10 @@
             </form>
           </div><!-- End Contact Form -->
 
-        </div>
+        <!--</div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section>  <!-- End Contact Section -->
 
   </main><!-- End #main -->
 
