--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 88383 94557</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
-        <a href="https://wa.me/917904327878" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
-        <a href="https://www.facebook.com/profile.php?id=100087737161276" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="https://instagram.com/magnifysourcing?igshid=YmMyMTA2M2Y=" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/magnify-sourcing-455739255/" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://wa.me/917904327878" class="whatsapp" target="_blank"><i class="bi bi-whatsapp"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100087737161276" class="facebook" target="_blank"><i class="bi bi-facebook"></i></a>
+        <a href="https://instagram.com/magnifysourcing?igshid=YmMyMTA2M2Y=" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/magnify-sourcing-455739255/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></i></a>
       </div>
     </div>
   </section><!-- End Top Bar -->
@@ -608,10 +608,10 @@
           </a>
           <p>We help Businesses grow using Digital Marketing and Web Application Solutions</p>
           <div class="social-links d-flex mt-4">
-            <a href="https://wa.me/917904327878" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
-            <a href="https://www.facebook.com/profile.php?id=100087737161276" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="https://instagram.com/magnifysourcing?igshid=YmMyMTA2M2Y=" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/magnify-sourcing-455739255/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <a href="https://wa.me/917904327878" class="whatsapp" target="_blank"><i class="bi bi-whatsapp"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100087737161276" class="facebook" target="_blank"><i class="bi bi-facebook"></i></a>
+            <a href="https://instagram.com/magnifysourcing?igshid=YmMyMTA2M2Y=" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/magnify-sourcing-455739255/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
