--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-file-earmark-bar-graph"></i></div>
-              <h4 class="title"><a href="" class="stretched-link">Web<br>Application</a></h4>
+              <h4 class="title"><a href="" class="stretched-link">Full Stack<br>Advertising</a></h4>
             </div>
           </div>
           <!--End Icon Box -->
@@ -329,8 +329,8 @@
               <div class="icon">
                 <i class="bi bi-shop"></i>
               </div>
-              <h3>Google Ads</h3>
-              <p>"Use the power of Google Ads to increase your business"</p>
+              <h3>Full Stack Advertising</h3>
+              <p>"creating and managing ad campaigns to analyzing and optimizing ad performance"</p>
               <!-- <a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a> -->
             </div>
           </div><!-- End Service Item -->
