--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   <section id="topbar" class="topbar d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:deena@magnifysourcing.com">deena@magnifysourcing.com</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 88383 94557</span></i>
+        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:sakthivel@magnifysourcing.com">sakthivel@magnifysourcing.com</a></i>
+        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 79043 27878</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
         <a href="https://wa.me/917904327878" class="whatsapp" target="_blank"><i class="bi bi-whatsapp"></i></a>
@@ -647,8 +647,8 @@
              Tamil Nadu, INDIA. <br><br>
            </a>
 
-            <a class="loc" href="tel:+918838394557"> <strong>Phone:</strong> +91 88383 94557<br></a>
-              <a class="loc" href="mailto:deena@magnifysourcing.com" target="_blank"> <strong>Email:</strong> deena@magnifysourcing.com<br></a>
+            <a class="loc" href="tel:+917904327878"> <strong>Phone:</strong> +91 79043 27878<br></a>
+              <a class="loc" href="mailto:sakthivel@magnifysourcing.com" target="_blank"> <strong>Email:</strong> sakthivel@magnifysourcing.com<br></a>
           </p>
 
         </div>
