--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Web Design & Digital Marketing Services | Bangalore | Coimbatore </title>
   <meta content="Web Design & Digital Marketing Services in Bangalore and Coimbatore" name="description">
-  <meta content="AI + Data Science" name="keywords">
+  <meta content="3D Scanning services, best 3D scanning services, best 3D printing services, 3D reverse engineering software, 3D laser scanner,3D scanning technology,3D scanning equipment, 3D scanning solutions, 3D scanning for reverse engineering, 3D scanning for product design, 3D scanning for heritage preservation, 3D scanning for art and cultural heritage, 3D scanning for medical applications" name="3D scanning for industrial design, 3D scanning for prototyping, 3D scanning for quality control, 3D scanning for manufacturing, 3D scanning for aerospace and defense,3D printing for custom parts, 3D printing materials, 3D printing for jewelry, 3D printing for dental and medical applications, cmm inspection Coimbatore Bangalore Hosure Chennai Pune">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.ico" rel="icon">
