--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <section id="topbar" class="topbar d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:sakthivel@magnifysourcing.com">magnifysourcing@gmail.com</a></i>
+        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:sakthivel@magnifysourcing.com">sakthivel@magnifysourcing.com</a></i>
         <i class="bi bi-phone d-flex align-items-center ms-4"><a href="tel:+91 9698984581">9698984581</a></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
@@ -330,7 +330,7 @@
               <div class="icon">
                 <i class="bi bi-browser-chrome"></i>
               </div>
-              <h3>Lead Generation</h3>
+              <h3>Cloud Service</h3>
               <p></p>
               <!-- <a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a> -->
             </div>
@@ -341,7 +341,7 @@
               <div class="icon">
                 <i class="bi bi-shop"></i>
               </div>
-              <h3>3D Scanning</h3>
+              <h3>UI/UX Design</h3>
               <p></p>
               <!-- <a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a> -->
             </div>
