--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <!--<h1 class="head"></h1>
        <h1>Scan. Reverse. Model.</h1> -->
        <div>
-        <img src="https://i.ibb.co/T07HPz5/Liceria-Co-4.png" class="responsive" alt="...">
+        <img src="https://i.ibb.co/4spLcHr/Liceria-Co-5.png" class="responsive" alt="...">
 
         
        </div>
